[package]
name = "linecache"
version = "0.1.1"
edition = "2021"
description = "高效读取文本文件，并自动缓存。Efficiently read text files and automatically cache them."
license = "MIT"
repository = "https://github.com/seo888/linecache"



[dependencies]
moka = { version = "0.12.10",features = ["future"]}
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17" 
rand = "0.8"
tempfile = "3.18.0"
dashmap = "7.0.0-rc2"