[package]
name = "linecache"
version = "0.2.0"
edition = "2021"
description = "高性能异步行缓存库 (自动内存限制版本)。High-Performance Asynchronous Line Cache Library (Auto-Memory Limit Version)"
license = "MIT"
repository = "https://github.com/seo888/linecache"

[dependencies]
moka = { version = "0.12",features = ["future"]}
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.8"
sysinfo = "0.37"
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.23"